--- a/app/views/user_mailer/newpassword.html.erb
+++ b/app/views/user_mailer/newpassword.html.erb
@@ -4,7 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>This is your new password, <%= @user.first.name %>!</h1>
-    <p>asde34f43</p>
+    <h2>This is your new password, <%= @user.name %>!</h2>
+    <p><%= @password%></p>
+    <p>Thank you for using Tinkchat!</p>
   </body>
 </html>
