--- a/app/views/user_mailer/newpassword.text.erb
+++ b/app/views/user_mailer/newpassword.text.erb
@@ -1,2 +1,3 @@
-Hi <%= @user.first.name %>
-Sample mail sent using smtp.
+This is your new password, <%= @user.name %>!
+<%= @password%>
+Thank you for using Tinkchat!
