--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,3 +1,5 @@
-<li><a href="#" data-toggle="modal" data-target="#contactModal">Contact</a></li>
-<li><a href="#" data-toggle="modal" data-target="#privacyModal">Privacy</a></li>
-<li><a href="#" data-toggle="modal" data-target="#termsModal">Terms</a></li>
+<div class="visible-xs collapsed-menu"></div>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/privacy">Privacy</a></li>
+  <li><a href="/terms">Terms</a></li>
+<div class="visible-xs collapsed-menu"></div>
