case insensitive for search, name returned after login. responsive design fixes for frontend, frontend content (privacy&terms)

--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,5 +1,143 @@
 <div class="wrapper subpage">
-  <h1>Terms</h1>
-  <p>Duis quis magna ut mi aliquet bibendum in ut nisi. Donec finibus dui vitae dui efficitur elementum. Curabitur et libero vel metus interdum euismod nec id erat. Curabitur vehicula augue ut neque commodo, ut consectetur tellus volutpat. In auctor augue at lacus luctus scelerisque. Nunc tincidunt leo non nunc rhoncus, eget iaculis erat fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer aliquam iaculis enim. Mauris gravida mollis orci a bibendum. Curabitur tempus, augue sollicitudin vulputate pulvinar, quam nunc fermentum sapien, in auctor ante eros viverra magna. Nunc in mauris elit. Suspendisse vitae metus placerat, sagittis arcu vel, blandit ante. Curabitur pretium luctus arcu, nec laoreet nisi dapibus in. Aliquam imperdiet viverra facilisis. Nulla faucibus hendrerit augue, quis ultrices odio ullamcorper id.</p>
-  <p>Nam tristique tortor porta, porta sem vitae, consectetur sem. In placerat odio sit amet facilisis scelerisque. Vestibulum non pellentesque leo, sed lobortis lectus. Suspendisse eu sapien vel nisl laoreet posuere ut hendrerit tortor. Sed eu consequat quam, id malesuada odio. Morbi elementum eu odio sit amet laoreet. Pellentesque lacinia blandit sem at iaculis. Aliquam non massa elementum, suscipit est at, sagittis libero. Nulla laoreet velit at nulla facilisis, id tempus odio lacinia. Sed condimentum purus eget ultrices porta. Etiam condimentum ut turpis sit amet tempus. Morbi venenatis non nisl a iaculis. Integer id ex magna. Proin id arcu vel ligula dapibus egestas. Mauris laoreet suscipit placerat.</p>
+
+  <h1>Terms of Use</h1>
+  <p>Effective date: November 14, 2014</p>
+
+  <h2>Your Consent</h2>
+  <p>By downloading, accessing or using mobile applications, websites or other products or services (collectively, the "Service") from developers of Tinkchat ("Tinkchat"), you agree to be bound by these Terms of Use ("Terms"). If you do not agree to these Terms, please do not use the Service.</p>
+
+
+  <h2>Audience</h2>
+  <p>The Service is intended for people above the age of 13. People under the age of 13 are prohibited from creating Tinkchat accounts. You affirm that you are either more than 18 years of age, or an emancipated minor, or possess legal parental or guardian consent, and are fully able and competent to enter into the terms, conditions, affirmations, obligations, representations, and warranties set forth in these Terms, and to abide by and comply with these Terms. In addition, you affirm that you have not been previously suspended or removed from the Service and do not have more than one Tinkchat account. We may, in our sole discretion, refuse to offer Service to any person or entity. We may, without notice and in our sole discretion, terminate your right to use the Service, or any portion of thereof, and block or prevent your future access to and use of the Service or any portion thereof.</p>
+
+
+  <h2>Feedback</h2>
+  <p>You agree that any feedback, suggestions, ideas or other information or materials regarding the Service, whether by email or otherwise ("Feedback"), are non-confidential and shall become the sole property of Tinkchat. We will be entitled to the unrestricted use and dissemination of such Feedback for any purpose, commercial or otherwise, without acknowledgment or compensation to you. You waive any rights you may have to the Feedback (including any copyrights or moral rights). We like hearing from users, but please do not share your ideas with us if you expect to be paid or want to continue to own or claim rights to them.</p>
+
+
+  <h2>Usage Data</h2>
+  <p>By using the Service you agree to let Tinkchat collect information about your usage of the application. For more information about the information we collect from you and your device and Tinkchat's privacy practices, please review our Privacy Policy.</p>
+
+
+  <h2>User Content</h2>
+  <p>The Service consists of interactive features and areas that allow users to create and transmit, including but not limited to text (collectively, "User Content"). You understand that your User Content may be viewable by others. You agree that you are solely responsible for your User Content and that Tinkchat is not responsible or liable for any User Content. While we are not obligated to do so, we reserve the right, and have absolute discretion, to review, screen and delete User Content at any time and for any reason.</p>
+
+
+  <h2>Tinkchat Content</h2>
+  <p>Unless otherwise stated, all materials contained on or within the Service, including, but not limited to text, graphics, designs, code, and written and other materials (collectively, "Tinkchat Content"), as well as their selection and arrangement, are protected by copyright, trademark, trade dress, patent, and/or other intellectual property laws, and unauthorized use of Tinkchat Content may violate such laws and these Terms. Except as expressly provided in these Terms, Tinkchat does not grant any express or implied rights to use Tinkchat Content. You agree that you will not copy, reproduce, republish, frame, download, transmit, modify, display, reverse engineer, sell, or participate in any sale of, rent, lease, loan, assign, distribute, license, sublicense, or exploit in any way, in whole or in part, Tinkchat Content, Tinkchat or any related software, except as expressly stated in these Terms.</p>
+
+  <p>You are hereby granted a limited, non-exclusive, non-sublicensable license to access and use Tinkchat and Tinkchat Content. This license is revocable at any time. This license is subject to these Terms and does not include:</p>
+
+  <p>• The distribution, public performance or public display of Tinkchat Content;</p>
+
+  <p>• Modifying or otherwise making any derivative uses of the Tinkchat or Tinkchat Content, or any portion thereof;</p>
+
+  <p>• Use of any scraping, data mining, robots or similar data gathering or extraction methods;</p>
+
+  <p>• Downloading (other than page caching) any portion of Tinkchat, Tinkchat Content or any information contained therein, except as expressly permitted on the Service;</p>
+
+  <p>• Accessing the Tinkchat API with an unauthorized or third-party client; and</p>
+
+  <p>• Any use of Tinkchat or Tinkchat Content other than for their intended purposes.</p>
+
+  <p>Any use of Tinkchat or Tinkchat Content other than as specifically authorized in these Terms, without the prior written permission of Tinkchat, is strictly prohibited and will terminate the license to use the Service granted in these Terms.</p>
+
+
+  <h2>Prohibited Activities</h2>
+  <p>In addition to other restrictions outlined in these Terms, you agree that you will not:</p>
+
+  <p>• Use the Service for any purpose that is illegal, beyond the scope of their intended use, or otherwise prohibited in these Terms;</p>
+
+  <p>• Use the Service in any manner that could interfere with, disrupt, negatively affect or inhibit other users from fully enjoying the Service, or that could damage, disable, overburden or impair the functioning of the Service in any manner;</p>
+
+  <p>• Compromise the security of the Service;</p>
+
+  <p>• Send any unsolicited or unauthorized advertising, spam, solicitations or promotional materials;</p>
+
+  <p>• Use any robot, spider, crawler, scraper or other automated means or interface not
+  provided by us to access the Service or to extract data;</p>
+
+  <p>• Reverse engineer any aspect of the Service or do anything that might discover source code or bypass or circumvent measures employed to prevent or limit access to any area, content or code of the Service;</p>
+
+  <p>• Use or attempt to use another user's account without authorization;</p>
+
+  <p>• Attempt to circumvent any content filtering techniques we employ, or attempt to access areas/features of the Service that you are not authorized to access;</p>
+
+  <p>• Attempt to indicate in any manner that you have a relationship with us or that we have endorsed you or any products or services without our express written consent to do so;</p>
+
+  <p>• Engage in any harassing, intimidating, predatory or stalking conduct;</p>
+
+  <p>• Impersonate any person or entity or otherwise misrepresents your affiliation with a person or entity;</p>
+
+  <p>• Violate the publicity, privacy or data protection rights of others;</p>
+
+  <p>• Infringe any patent, trademark, trade secret, copyright or other intellectual or proprietary right of any party;</p>
+
+  <p>• Buy, sell, rent, lease, or otherwise offer in exchange for any compensation, access to your Tinkchat account, a Tinkchat name, or a friend link without Tinkchat's prior written consent;</p>
+
+  <p>• Develop any third-party applications that interact with User Content or the Service without our prior written consent; and</p>
+
+  <p>• Use the Service for any illegal or unauthorized purpose or engage in, encourage, or promote any activity that violates these Terms.</p>
+
+  <p>You further agree to abide by any third-party terms that apply when posting reviews of the Service, including iTunes App Store Terms of Service and/or Android Market Terms of Service. Posting Tinkchat names in app store reviews is strictly prohibited and may result in deletion of your Tinkchat account.</p>
+
+
+ <h2> Account Security</h2>
+  <p>After opening a Tinkchat account, you accept all responsibility for any activity that occurs while logged into your account. You are responsible for making sure that you keep your password secure and safe. You agree that you will not share your password with others or do anything that might jeopardize the security of your account.</p>
+
+
+  <h2>Modifications to the Service</h2>
+  <p>We reserve the right to modify or discontinue, temporarily or permanently, the Service or any features or portions thereof without prior notice. You agree that we will not be liable for any modification, suspension or discontinuance of the Service or any part thereof.</p>
+
+
+  <h2>Copyright Policy</h2>
+  <p>Tinkchat respects the intellectual property rights of others. We have adopted a policy of, upon notice, restricting access to or deleting content that infringes a third party's copyright and, in appropriate circumstances and in our sole discretion, terminating account holders or other users of the Service who are deemed to be repeat infringers of a third party's copyrighted work.</p>
+
+  <p>If you believe that anything on the Service infringes any copyright that you own or control, you may file a notice of such infringement at this email address: TinkchatApp@gmail.com.</p>
+
+
+  <h2>Disclaimer</h2>
+  <p>THE SERVICE AND THE TINKCHAT CONTENT ARE PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT. IN ADDITION, WHILE TINKCHAT ATTEMPTS TO PROVIDE A GOOD USER EXPERIENCE, WE CANNOT AND DO NOT REPRESENT OR WARRANT THAT THE SERVICE WILL ALWAYS BE SECURE OR ERROR-FREE OR THAT THE SERVICE WILL ALWAYS FUNCTION WITHOUT DELAYS, DISRUPTIONS OR IMPERFECTIONS.</p>
+
+
+  <h2>Note to International Users</h2>
+  <p>The Service is hosted in Slovenia. If you are accessing the Service from any other region with laws or regulations governing personal data collection, use, and disclosure, that differ from Slovene and those of European Union, be advised that through your continued use of the Service, which is governed by Slovene law and the law of European Union, you are transferring your personal information to Slovenia and you consent to that transfer.</p>
+
+
+  <h2>Disputes</h2>
+
+  <h3>1) Indemnification</h3>
+  <p>By agreeing to these Terms you agree to indemnify, defend and hold harmless Tinkchat, our managing members, shareholders, employees, affiliates, licensors and/or suppliers (the "Tinkchat Parties") from and against any and all charges, claims, complaints, costs, damages, expenses, liabilities and losses (including attorneys' fees) due to, arising out of, or relating in any way to (a) your use of the Service; (b) any User Content you post, upload, use, store, distribute, or otherwise transmit through the Service; (c) your violation of these Terms; or (d) your violation of the rights of another.</p>
+
+  <h3>2) Limitation of Liability</h3>
+  <p>Except where prohibited by law, in no event will Tinkchat or the Tinkchat Parties be liable for any indirect, special, punitive, incidental, exemplary or consequential damages that result from (a) the use of, or inability to use, the Service; (b) the provision of the Service or any materials available therein; or (c) the conduct of other users of the Service, even if Tinkchat has been advised of the possibility of such damages. You assume total responsibility for your use of the Service. Your only remedy against Tinkchat for dissatisfaction with the Service or any content is to stop using the Service. If, notwithstanding these Terms, Tinkchat is found liable to you for any damage or loss which arises out of or is in any way connected with your use of the Service or any content, Tinkchat's liability shall in no event exceed $1.00. Some jurisdictions do not allow limitations of liability, so the foregoing limitation may not apply to you.</p>
+
+  <h3>3) Arbitration</h3>
+  <p>PLEASE READ THE FOLLOWING PARAGRAPH CAREFULLY BECAUSE IT REQUIRES YOU TO ARBITRATE DISPUTES WITH TINKCHAT LIMITS THE MANNER IN WHICH YOU CAN SEEK RELIEF FROM US.</p>
+
+  <p>You and Tinkchat agree to arbitrate any dispute arising from these Terms or your use of the Service, except that you and Tinkchat are not required to arbitrate any dispute in which either party seeks equitable and other relief for the alleged unlawful use of copyrights, trademarks, trade names, logos, trade secrets, or patents. ARBITRATION PREVENTS YOU FROM SUING IN COURT OR FROM HAVING A JURY TRIAL. You and Tinkchat agree (a) that any arbitration will occur in Ljubljana, Slovenia; (b) that arbitration will be conducted confidentially by a single arbitrator in accordance with the rules of JAMS; and (c) that Slovenia or slovene courts have exclusive jurisdiction over any appeals of an arbitration award and over any suit, if any, between the parties not subject to arbitration. Other than class procedures and remedies discussed below, the arbitrator has the authority to grant any remedy that would otherwise be available in court. WHETHER THE DISPUTE IS HEARD IN ARBITRATION OR IN COURT, YOU AND TINKCHAT WILL NOT COMMENCE AGAINST THE OTHER A CLASS ACTION, CLASS ARBITRATION OR REPRESENTATIVE ACTION OR PROCEEDING.</p>
+
+  <h3>4) Forum and Venue</h3>
+  <p>A lawsuit, if any, by you or Tinkchat against the other will occur in court in Ljubljana, Slovenia. You and Tinkchat agree that the jurisdiction and venue of these courts is exclusive.</p>
+
+
+  <h2>Applicable Law</h2>
+  <p>Any dispute between you and Tinkchat will be governed by these Terms and the laws of Slovenia and those of European Union, without giving effect to any conflict of laws principles that may provide for the application of the law of another jurisdiction.</p>
+
+
+  <h2>Severability</h2>
+  <p>If any provision of these Terms shall be deemed unlawful, void or for any reason unenforceable, then that provision shall be deemed severable from these Terms and shall not affect the validity and enforceability of any remaining provisions.</p>
+
+
+  <h2>Complete Agreement</h2>
+  <p>These Terms supersede all prior understandings regarding the same and represent the complete agreement between you and Tinkchat.</p>
+
+
+  <h2>Changes to Terms of Use</h2>
+  <p>We reserve the right to change these terms at any time. When we do, we will notify you of the change via email address you provided. You may opt out of these notifications whereby you become solely responsible for staying up to date with these terms.</p>
+
+
+  <h2>Contact</h2>
+  <p>TinkchatApp@gmail.com</p>
+
 </div>
