--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,8 @@
       <span class="icon-bar"></span>
     </button>
     <div class="btn btn-danger btn-xl pull-right">Download</div>
-    <a href="/" class="apptitle pull-left">Tinkchat</a>
+    <a href="/" style="font-size: 42px;" class="apptitle pull-left visible-lg visible-md visible-sm">Tinkchat</a>
+    <a href="/" style="font-size: 24px; margin: 36px 0 20px 16px;" class="apptitle pull-left visible-xs">Tinkchat</a>
     <div class="visible-xs" style="clear:both;"></div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav pull-right">
