--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper subpage">
-  <h1>Contact</h1>
+  <h1>Contact us</h1>
   <form>
     <div class="form-group">
       <label for="exampleInputEmail1">Subject</label>
@@ -12,8 +12,8 @@
       <label for="exampleInputEmail1">Message</label>
           <textarea class="form-control" rows="5"></textarea>
     </div>
-
-
     <button type="submit" class="btn btn-default pull-right btn-lg">Submit</button>
+
+    <div style="clear:both;"></div>
   </form>
 </div>
