--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,5 +1,102 @@
 <div class="wrapper subpage">
-  <h1>Privacy</h1>
-  <p>Duis quis magna ut mi aliquet bibendum in ut nisi. Donec finibus dui vitae dui efficitur elementum. Curabitur et libero vel metus interdum euismod nec id erat. Curabitur vehicula augue ut neque commodo, ut consectetur tellus volutpat. In auctor augue at lacus luctus scelerisque. Nunc tincidunt leo non nunc rhoncus, eget iaculis erat fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer aliquam iaculis enim. Mauris gravida mollis orci a bibendum. Curabitur tempus, augue sollicitudin vulputate pulvinar, quam nunc fermentum sapien, in auctor ante eros viverra magna. Nunc in mauris elit. Suspendisse vitae metus placerat, sagittis arcu vel, blandit ante. Curabitur pretium luctus arcu, nec laoreet nisi dapibus in. Aliquam imperdiet viverra facilisis. Nulla faucibus hendrerit augue, quis ultrices odio ullamcorper id.</p>
-  <p>Nam tristique tortor porta, porta sem vitae, consectetur sem. In placerat odio sit amet facilisis scelerisque. Vestibulum non pellentesque leo, sed lobortis lectus. Suspendisse eu sapien vel nisl laoreet posuere ut hendrerit tortor. Sed eu consequat quam, id malesuada odio. Morbi elementum eu odio sit amet laoreet. Pellentesque lacinia blandit sem at iaculis. Aliquam non massa elementum, suscipit est at, sagittis libero. Nulla laoreet velit at nulla facilisis, id tempus odio lacinia. Sed condimentum purus eget ultrices porta. Etiam condimentum ut turpis sit amet tempus. Morbi venenatis non nisl a iaculis. Integer id ex magna. Proin id arcu vel ligula dapibus egestas. Mauris laoreet suscipit placerat.</p>
+
+  <h1>Privacy Policy</h1>
+  <p>Effective date: November 14, 2014</p>
+
+  <p>This Privacy Policy describes how we, developers of Tinkchat ("Tinkchat"), handle information about you ("user") when you use our mobile application and website (collectively, the "Service") or otherwise communicate with us.</p>
+
+
+  <h2>1. Collection of Information</h2>
+
+  <h3>1.1. Information You Provide</h3>
+  <p>We collect information you provide when creating an account, using our Service or otherwise communicating with us. The types of information we collect include your name, email address, password and any other information you choose to provide.</p>
+
+  <h3>1.2. Information We Collect Automatically</h3>
+  <p>We automatically collect information about you when you use our Service, including:</p>
+
+  <p>• Usage Information: When you send or receive messages ("Tinks") via our Service, we collect information about these messages, including date, time, sender and recipient of the Tink. We also collect information about the number of messages sent and received between you and your friends.</p>
+
+  <p>• Log Information: We log information about your use of our website, including your browser type and language, access times, pages viewed, your IP address and the website you visited before navigating to our website.</p>
+
+  <p>• Device Information: We may collect information about the computer or device you use to access our Service, including hardware model, operating system and version, MAC address, unique device identifier, phone number, International Mobile Equipment Identity ("IMEI") and mobile network information. With your consent, we may access your device's native phonebook application to facilitate your use of certain features.</p>
+
+  <p>• Information Collected by Cookies and Similar Technologies: We use various technologies to collect information, which may include sending cookies to you. We may also collect information using web beacons (also known as tracking pixels).</p>
+
+  <p>• Analytics Information: We do not yet use analytics.</p>
+
+  <h3>1.3. Other Sources</h3>
+  We may also obtain information from other sources and combine it with information we collect through our Service.</p>
+
+
+  <h2>2. Use of Information</h2>
+  <p>We may use information about you for various purposes, including to:</p>
+
+  <p>• Provide, maintain and improve our Service, including to provide additional features and content for your messages.</p>
+
+  <p>• Provide and deliver the products and services you request, process transactions and send you related information.</p>
+
+  <p>• Respond to your comments, questions, requests and provide customer service.</p>
+
+  <p>• Send you technical notices, updates, security alerts, support and administrative messages.</p>
+
+  <p>• Communicate with you about products, services, offers, promotions, rewards, and events offered by us and others, and provide news and information we think will be of interest to you.</p>
+
+  <p>• Monitor and analyze trends, usage and activities in connection with our Service.</p>
+
+  <p>• Personalize and improve our Service and provide advertisements, content or features that match user profiles or interests.</p>
+
+  <p>• Link or combine with information we get from others to help understand your needs and provide you with better service.</p>
+
+  <p>• Detect, investigate and/or prevent fraudulent, unauthorized or illegal activity.</p>
+
+  <p>• Carry out any other purpose for which the information was collected.</p>
+
+
+  <h2>3. Sharing of Information</h2>
+  <p>We may share information about you as follows or as otherwise described in this Privacy Policy:</p>
+
+  <p>• With other users when you send them a message, including your name, date and time of sending.</p>
+
+  <p>• When you use "Find Friends" to find and add your friends, your name will be shared with other users who use "Find Friends".</p>
+
+  <p>• With vendors, consultants and other service providers who need access to such information to carry out work on our behalf.</p>
+
+  <p>• In response to legal process or request for information if we believe disclosure is in accordance with any applicable law, rule, or regulation, or as otherwise required by any applicable law, rule or regulation.</p>
+
+  <p>• In order to investigate or remedy potential violations of our user agreements or policies, or to protect the rights, property and safety of Tinkchat, our users or others.</p>
+
+  <p>• In connection with, or during negotiations of, any merger, sale of company assets, financing or acquisition of all or a portion of our business to another company.</p>
+
+  <p>• With your consent or at your direction.</p>
+
+
+  <h2>4. Storing of Information</h2>
+  <p>Your information collected through our Service may be stored and processed in Slovenia or any other country in which Tinkchat maintains facilities.</p>
+
+  <h3>4.1. International Data Transfers</h3>
+  <p>We reserve the right to transfer information we collect about you, including personal information, across borders and from your country or jurisdiction to other countries or jurisdictions around the world.</p>
+
+  <h3>4.2. Security</h3>
+  <p>We take reasonable measures to help protect information about you from loss, theft, misuse and unauthorized access, disclosure, alteration and destruction.</p>
+
+
+  <h2>5. External Links</h2>
+  <p>We are not responsible for privacy practices of other websites or services linked to or from our Service, including the information or content contained within them.</p>
+
+
+  <h2>6. Children</h2>
+  <p>Our Service is not intended for children under the age of 13 and we do not knowingly collect any personal information from such children.</p>
+
+
+  <h2>7. Changes to Privacy Policy</h2>
+  <p>We reserve the right to change this Privacy Policy at any time. When we do, we will notify you of the change via email address you provided. You may opt out of these notifications whereby you become solely responsible for staying up to date with this Privacy Policy.</p>
+
+
+  <h2>8. Your Consent</h2>
+  <p>By using our Service you agree to this Privacy Policy.</p>
+
+
+  <h2>9. Contact</h2>
+  <p>TinkchatApp@gmail.com</p>
+
 </div>
