--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,4 @@
-<%# navigation styled for Bootstrap 3.0 %>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-
   <div class="navbar-header">
     <button type="button" class="pull-left toprightbutton navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -8,9 +6,10 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <div class="btn btn-danger btn-xl pull-right">Download</div>
+    <div class="btn btn-danger btn-xl pull-right visible-lg visible-md visible-sm">Download</div>
+    <div class="btn btn-danger btn-md pull-right visible-xs">Download</div>
     <a href="/" style="font-size: 42px;" class="apptitle pull-left visible-lg visible-md visible-sm">Tinkchat</a>
-    <a href="/" style="font-size: 24px; margin: 36px 0 20px 16px;" class="apptitle pull-left visible-xs">Tinkchat</a>
+    <a href="/" style="font-size: 32px; margin: 32px 0 20px 14px;" class="apptitle pull-left visible-xs">Tinkchat</a>
     <div class="visible-xs" style="clear:both;"></div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav pull-right">
@@ -19,5 +18,4 @@
       <div style="clear:both;"></div>
     </div>
   </div>
-
 </nav>
