--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,19 +1,27 @@
 <div class="wrapper subpage">
   <h1>Contact us</h1>
-  <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Subject</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter subject">
-    </div>    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Message</label>
-          <textarea class="form-control" rows="5"></textarea>
-    </div>
-    <button type="submit" class="btn btn-default pull-right btn-lg">Submit</button>
 
+  <%= form_tag("/contact", method: "get", html: { class: 'form-horizontal', method: :get }) do %>
+
+
+
+    <div class="form-group">
+      <%= label_tag(:subject, "Subject") %>
+      <%= text_field_tag(:subject) %>
+    </div>
+
+    <div class="form-group">
+      <%= label_tag(:email, "Email address") %>
+      <%= text_field_tag(:email) %>
+    </div>
+
+    <div class="form-group">
+      <%= label_tag(:message, "Message") %>
+      <%= text_area_tag(:message) %>
+    </div>
+
+  <%= submit_tag("Submit", class: "btn btn-default pull-right btn-lg") %>
+  <% end %>
     <div style="clear:both;"></div>
   </form>
 </div>
