--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -133,7 +133,7 @@ ul.nav a{
 .btn-md {
   padding: 8px 15px;
   font-size: 18px;
-  margin: 30px 10px;
+  margin: 30px 20px 30px 0px;
   border-radius: 10px;
   -moz-border-radius: 10px;
   background-color: #fff;
