--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,23 +1,21 @@
 <div class="wrapper subpage">
   <h1>Contact us</h1>
 
-  <%= form_tag("/contact", method: "get", html: { class: 'form-horizontal', method: :get }) do %>
-
-
+  <%= form_tag("/sendmessage", method: "post") do |f| %>
 
     <div class="form-group">
-      <%= label_tag(:subject, "Subject") %>
-      <%= text_field_tag(:subject) %>
+      <%= label_tag(:email, "Your email address") %>
+      <%= text_field_tag :email, nil, class: 'form-control', :required => true, :type => 'email' %>
     </div>
 
     <div class="form-group">
-      <%= label_tag(:email, "Email address") %>
-      <%= text_field_tag(:email) %>
+      <%= label_tag(:subject, "Subject") %>
+      <%= text_field_tag :subject, nil, class: 'form-control', :required => true %>
     </div>
 
     <div class="form-group">
       <%= label_tag(:message, "Message") %>
-      <%= text_area_tag(:message) %>
+      <%= text_area_tag :message, nil, class: 'form-control', size: "25x5", :required => true %>
     </div>
 
   <%= submit_tag("Submit", class: "btn btn-default pull-right btn-lg") %>
