--- a/app/views/friend_mailer/send_invite.html.erb
+++ b/app/views/friend_mailer/send_invite.html.erb
@@ -1,3 +1,3 @@
 <h2>Hello!</h2>
-<p><=% @user_name %> has invited you to join TinkChat.</p>
+<p><%= @user_name %> has invited you to join TinkChat.</p>
 <a href="http://tinkchatapp.herokuapp.com">http://tinkchatapp.herokuapp.com</a>
