--- a/app/views/pages/confirm_email.html.erb
+++ b/app/views/pages/confirm_email.html.erb
@@ -1,3 +1,1 @@
-<div class="wrapper subpage">
-  <h3><%= @text %></h3>
-</div>
+<div style="font-size: 22px; font-family: verdana;"><%= @text %></div>
