texts changed for pushes and mails

--- a/app/views/user_mailer/emailconfirmation.html.erb
+++ b/app/views/user_mailer/emailconfirmation.html.erb
@@ -4,8 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h2>Click on link below to activate your account</h2>
-    <a href="<%= @email_confirmation_url %>"><%= @email_confirmation_url %></a>
-    <p>Thank you for using Tinkchat!</p>
+    <p>We are psyched you decided to try Tinkchat.</p>
+    <a href="<%= @email_confirmation_url %>">Click here to complete your profile.</a>
+    <p>Have a great day,<br>
+    Tinkchat Team</p>
   </body>
 </html>
