text for mails, preset value in contact form

--- a/app/views/friend_mailer/send_invite.html.erb
+++ b/app/views/friend_mailer/send_invite.html.erb
@@ -1,3 +1,5 @@
-<h2>Hello!</h2>
-<p><%= @user_name %> has invited you to join Tinkchat.</p>
-<a href="http://tinkchatapp.herokuapp.com">http://tinkchatapp.herokuapp.com</a>
+<p>Hi,<br>
+I am using this new app called <a href="<%= ENV['MANDRILL_HOST'] %>">Tinkchat</a> and thought you might like it too :)</p>
+<br>
+<p>Enjoy,<br>
+<%= @user_name %></p>
