--- a/app/views/user_mailer/newpassword.html.erb
+++ b/app/views/user_mailer/newpassword.html.erb
@@ -8,7 +8,7 @@
     Your Tinkchat password was reset. If it was not you who requested the password reset, we apologize for the inconvenience and want you to know we will soon improve our password reset process. In the last few months we were focused primarily on developing Tinkchat’s core functionalities and did not have much time for other features.</p>
     <p>So for now here is your new password:</p>
     <p><b><%= @password %></b></p>
-    <p>We recommend you change your password after signing in. This comic provides a useful guideline for good password strength.</p>
+    <p>We recommend you change your password after signing in. <a href="https://xkcd.com/936/">This comic</a> provides a useful guideline for good password strength.</p>
     <p>Have a great day,<br>
     Tinkchat Team</p>
   </body>
