confirmation page design and frontpage design

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -218,6 +218,22 @@ a:hover {
   width: 135px;
 }
 
+.i-want-android {
+  padding: 5% 10% 10% 0%;
+  margin: 0 auto;
+  font-size: 22px;
+  color: #fff;
+  text-align: center;
+}
+
+.i-want-android a {
+  color: #fff;
+}
+
+.i-want-android a:hover {
+  color: #222222;
+}
+
 .subpage {
   background-color: #fff;
   padding: 5% 20%;
