--- a/app/views/pages/confirm_email.html.erb
+++ b/app/views/pages/confirm_email.html.erb
@@ -1,1 +1,1 @@
-<div style="font-size: 22px; font-family: verdana;"><%= @text %></div>
+<div style="font-size: 1.7em; font-family: verdana; padding: 20px;"><%= @text.html_safe %></div>
