--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -10,7 +10,7 @@
 
     <div class="form-group">
       <%= label_tag(:subject, "Subject") %>
-      <%= text_field_tag :subject, nil, class: 'form-control', :required => true, :value => params[:subject] %>
+      <%= text_field_tag :subject, nil, class: 'form-control', :required => true, :value => @value %>
     </div>
 
     <div class="form-group">
