--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,10 @@
   </div>
 
   <div class="play-button"><a href="#" data-toggle="modal" data-target="#videoModal"><img src="/images/play.png" /></a></div>
-
   <div class="download-appstore-button"><a href="#"><img src="/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" /></a></div>
+  <div class="i-want-android">
+    If you would like us to make an android version, send us the following message:<br>
+    <a href="/contact/Android">I want an Android version of Tinkchat</a>
+  </div>
   <%= render partial: 'video_modal' %>
 </div>
