--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,7 +8,7 @@
   <div class="download-appstore-button"><a href="#"><img src="/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" /></a></div>
   <div class="i-want-android">
     If you would like us to make an android version, send us the following message:<br>
-    <a href="/contact/Android">I want an Android version of Tinkchat</a>
+    <a href="/contact/Android"><b><u>I want an Android version of Tinkchat.</u></b></a>
   </div>
   <%= render partial: 'video_modal' %>
 </div>
