registration status added. press kit link on front page

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,4 +2,5 @@
   <li><a href="/contact">Contact</a></li>
   <li><a href="/privacy">Privacy</a></li>
   <li><a href="/terms">Terms</a></li>
+  <li><a href="/files/tinkchat_review_guide.pdf" target="_blank">Press Kit</a></li>
 <div class="visible-xs collapsed-menu"></div>
