--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,10 +6,10 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <div class="btn btn-danger btn-xl pull-right visible-lg visible-md visible-sm">Download</div>
-    <div class="btn btn-danger btn-md pull-right visible-xs">Download</div>
-    <a href="/" style="font-size: 42px;" class="apptitle pull-left visible-lg visible-md visible-sm">Tinkchat</a>
-    <a href="/" style="font-size: 32px; margin: 32px 0 20px 14px;" class="apptitle pull-left visible-xs">Tinkchat</a>
+    <div class="btn btn-danger btn-xl pull-right visible-lg visible-md">Download</div>
+    <div class="btn btn-danger btn-md pull-right  visible-sm visible-xs">Download</div>
+    <a href="/" style="font-size: 42px;" class="apptitle pull-left visible-lg visible-md">Tinkchat</a>
+    <a href="/" style="font-size: 32px; margin: 32px 0 20px 14px;" class="apptitle pull-left visible-sm visible-xs">Tinkchat</a>
     <div class="visible-xs" style="clear:both;"></div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav pull-right">
