presskit link in navigation changed

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,6 @@
 <div class="visible-xs collapsed-menu"></div>
   <li><a href="/contact">Contact</a></li>
+  <li><a href="https://www.dropbox.com/sh/4s47e3iy47mxrex/AABAjqdKnJmntHNsCWJBrOqDa" target="_blank">Press Kit</a></li>
   <li><a href="/privacy">Privacy</a></li>
   <li><a href="/terms">Terms</a></li>
-  <li><a href="/files/tinkchat_review_guide.pdf" target="_blank">Press Kit</a></li>
 <div class="visible-xs collapsed-menu"></div>
