error pages, links to app store, email content changed...

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,11 +4,13 @@
     <div class="col-md-8 main-text">Let your friends know you are thinking of them and put a big smile on their face. You never know who might then do the same for you.</div>
   </div>
 
-  <div class="play-button"><a href="#" data-toggle="modal" data-target="#videoModal"><img src="/images/play.png" /></a></div>
-  <div class="download-appstore-button"><a href="#"><img src="/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" /></a></div>
-  <div class="i-want-android">
-    If you would like us to make an android version, send us the following message:<br>
-    <a href="/contact/Android"><b><u>I want an Android version of Tinkchat.</u></b></a>
-  </div>
-  <%= render partial: 'video_modal' %>
+
+    <div class="play-button"><a href="#" data-toggle="modal" data-target="#videoModal"><img src="/images/play.png" /></a></div>
+    <div class="download-appstore-button"><a href="#"><img src="/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" /></a></div>
+    <div class="i-want-android text-center">
+      If you would like us to make an android version, send us the following message:<br>
+      <a href="/contact/Android"><b><u>I want an Android version of Tinkchat.</u></b></a>
+    </div>
+    <%= render partial: 'video_modal' %>
+
 </div>
