--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -219,11 +219,9 @@ a:hover {
 }
 
 .i-want-android {
-  padding: 5% 10% 10% 0%;
-  margin: 0 auto;
+  padding: 5% 0%;
   font-size: 22px;
   color: #fff;
-  text-align: center;
 }
 
 .i-want-android a {
