--- a/app/views/friend_mailer/send_invite.html.erb
+++ b/app/views/friend_mailer/send_invite.html.erb
@@ -1,5 +1,5 @@
 <p>Hi,<br>
-I am using this new app called <a href="<%= ENV['MANDRILL_HOST'] %>">Tinkchat</a> and thought you might like it too :)</p>
+I am using this app called <a href="<%= ENV['MANDRILL_HOST'] %>">Tinkchat</a> and thought you might like it :)</p>
 <br>
 <p>Enjoy,<br>
 <%= @user_name %></p>
