--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,8 +6,8 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <div class="btn btn-danger btn-xl pull-right visible-lg visible-md">Download</div>
-    <div class="btn btn-danger btn-md pull-right  visible-sm visible-xs">Download</div>
+    <div onclick="window.open('https://itunes.apple.com/us/app/tinkchat/id939420577', '_blank');" class="btn btn-danger btn-xl pull-right visible-lg visible-md">Download</div>
+    <div onclick="window.open('https://itunes.apple.com/us/app/tinkchat/id939420577', '_blank');" class="btn btn-danger btn-md pull-right  visible-sm visible-xs">Download</div>
     <a href="/" style="font-size: 42px;" class="apptitle pull-left visible-lg visible-md">Tinkchat</a>
     <a href="/" style="font-size: 32px; margin: 32px 0 20px 14px;" class="apptitle pull-left visible-sm visible-xs">Tinkchat</a>
     <div class="visible-xs" style="clear:both;"></div>
