--- a/app/views/pages/_video_modal.html.erb
+++ b/app/views/pages/_video_modal.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="modal-body">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="//www.youtube.com/embed/q6EoRBvdVPQ?modestbranding=1&autohide=1&showinfo=0&controls=1" frameborder="0" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="//www.youtube.com/embed/6kw1GN27u-k?modestbranding=1&autohide=1&showinfo=0&controls=1" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
       <div class="modal-footer">
