error pages, invite friends email content, link on frontpage

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,7 +6,7 @@
 
 
     <div class="play-button"><a href="#" data-toggle="modal" data-target="#videoModal"><img src="/images/play.png" /></a></div>
-    <div class="download-appstore-button"><a href="#"><img src="/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" /></a></div>
+    <div class="download-appstore-button"><a target="_blank" href="https://itunes.apple.com/us/app/tinkchat/id939420577"><img src="/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" /></a></div>
     <div class="i-want-android text-center">
       If you would like us to make an android version, send us the following message:<br>
       <a href="/contact/Android"><b><u>I want an Android version of Tinkchat.</u></b></a>
